--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   run-shill-bot:
     runs-on: ubuntu-latest
+    concurrency:
+      group: telegram-shill-bot
+      cancel-in-progress: true
 
     steps:
       - name: Checkout repository
