--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -31,6 +31,7 @@ jobs:
           echo "API_ID=${{ secrets.API_ID }}" >> .env
           echo "API_HASH=${{ secrets.API_HASH }}" >> .env
           echo "SESSION_STRING=${{ secrets.SESSION_STRING }}" >> .env
+          echo "REMOTE_API_URL=${{ secrets.REMOTE_API_URL }}" >> .env
 
       - name: Run shill bot
         run: python shill_bot.py
